# uriregistry

./: .flake8  .travis.yml  CHANGES.md  CHANGES.rst  MANIFEST.in  README.md  README.rst  development.ini  production.ini  pyproject.toml  requirements-dev.txt  requirements.txt  sample.cfg  setup.py  tim_test.py  tox.ini
.github/workflows/: uriregistry.yaml
docs/: Makefile
docs/source/: api.rst  architecture.rst  architectuur.rst  changes.rst  conf.py  development.rst  index.rst  installatie.rst  intro.rst  ontwikkeling.rst  opmerkingen.rst  overzicht.rst  service.rst
tests/: conftest.py  test.cfg  test.yaml  test_functional.py  test_general.py  test_models.py  test_registry.py  test_registry_error.cfg  test_utils.py  test_views.py
uriregistry/: __init__.py  models.py  registry.py  utils.py  views.py
